feat: 인증 활성화 및 역할 기반 접근제어 적용
permitAll() 을 제거하고 JWT 필터를 다시 등록했다. 필터에 있던 하드코딩
우회 경로 목록(/api/patients/, /api/agent/ 등)도 함께 제거했다.
AI 엔드포인트는 임상 판단이 개입하므로 DOCTOR 전용으로 묶었다.

공개 가입이 요청 본문의 role 을 그대로 부여하던 권한 상승 경로를 막았다.
가입은 항상 DEFAULT 이고, 역할 부여는 SUPER_USER 만 가능하다.
최초 SUPER_USER 는 BOOTSTRAP_SUPERUSER_PASSWORD 가 설정된 경우에만 시드된다.